--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.1",
     "react-dom": "^17.0.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
